# GOBSG

./: .gitignore  Cargo.toml  README.md  concat.sh
LICENSES/: LICENSE-BSD  LICENSE-POLYFORM-SMALL-BUSINESS.md  NOTICE.md  THIRD-PARTY-NOTICES.md
src/: main.rs
src/routes/: callback.rs  details.rs  login.rs  logout.rs  mod.rs  sessionstatus.rs
src/tools/: error.rs  mod.rs  settings.rs
