#/!/////// START OF FILE //////////
#/! GOBSG
#/!
#/! Copyright (c) 2025 Gistyr LLC
#/!
#/! Licensed under the PolyForm Small Business License 1.0.0
#/! See LICENSES/LICENSE-POLYFORM-SMALL-BUSINESS.md or https://polyformproject.org/licenses/small-business/1.0.0
#/!
#/! Required Notice: Copyright Gistyr LLC (https://gistyr.dev)
#/!
#/! For full licenses see:
#/! LICENSES/
#/!
#/! ---------------------------------------- //

[package]
name = "gobsg"
version = "3.1.1"
edition = "2024"
rust-version = "1.85.1"
authors = ["Gistyr LLC <contact@gistyr.dev>"]
description = "A secure OIDC Backend-for-Frontend gateway providing cookie-based session management for web clients"
readme = "README.md"
license = "PolyForm Small Business License 1.0.0"
repository = "https://github.com/Gistyr/GOBSG"
homepage = "https://github.com/Gistyr/GOBSG"
documentation = "https://docs.rs/gobsg"   
keywords = ["logging", "async", "file", "console", "log"]
categories = ["development-tools", "asynchronous"]
exclude = ["tests/logs/*.log"]


[dependencies]
better-logger = { version = "2.1.3", features = ["native"] }
actix-web = "4.12.0"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-cors = "0.7.0"
openidconnect = "4.0.1"
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio = "1.48.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
hex = "0.4.3"
url = "2.5.7"
toml = "0.9.8"
num_cpus = "1.17.0"

#///////// END OF FILE //////////