#/!/////// START OF FILE //////////
#/! GOBSG
#/!
#/! Copyright (c) 2025 Gistyr LLC
#/!
#/! Licensed under the PolyForm Small Business License 1.0.0
#/! See LICENSES/LICENSE-POLYFORM-SMALL-BUSINESS.md or https://polyformproject.org/licenses/small-business/1.0.0
#/!
#/! Required Notice: Copyright Gistyr LLC (https://gistyr.dev)
#/!
#/! For full licenses see:
#/! LICENSES/
#/!
#/! ---------------------------------------- //

[package]
name = "gobsg"
version = "3.2.3"
edition = "2024"
rust-version = "1.85.1"
authors = ["Gistyr LLC <contact@gistyr.dev>"]
description = "A secure OIDC Backend-for-Frontend gateway providing cookie-based session management for web clients"
readme = "README.md"
license-file = "LICENSES/LICENSE-POLYFORM-SMALL-BUSINESS.md"
repository = "https://github.com/Gistyr/GOBSG"
homepage = "https://github.com/Gistyr/GOBSG"
documentation = "https://docs.rs/gobsg"   
keywords = ["logging", "async", "file", "console", "log"]
categories = ["web-programming::http-server", "web-programming::http-client", "authentication", "network-programming", "config"]
exclude = ["concat.sh", "target/x86_64-unknown-linux-gnu/release/gobsg"]
default-run = "gobsg"

[dependencies]
better-logger = { version = "2.1.6", features = ["native"] }
actix-web = "4.12.1"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-cors = "0.7.0"
openidconnect = { version = "4.0.1", features = ["reqwest"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
tokio = "1.48.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
hex = "0.4.3"
url = "2.5.7"
toml = "0.9.10"
num_cpus = "1.17.0"

#///////// END OF FILE //////////